Add book creation and editing, also error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,7 @@
     <title>Ошибочка...</title>
 </head>
 <body>
-
+<h1 style="text-align:center">Ошибка</h1>
+<h1 style="text-align:center" th:text="${msg}"></h1>
 </body>
 </html>
