--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -18,7 +18,7 @@
     <h4 th:if="${order.getStatus().value}" th:text="'Статус заказа: Открыт.'"></h4>
     <h4 th:if="${!order.getStatus().value}" th:text="'Статус заказа: Закрыт.'"></h4>
     <h1 th:text="'ИТОГО:' + ${order.getPrice()}"></h1>
-    <form th:if="${ableToCheckout && order.getStatus() == openStatus}" method="get" action="/order/checkout">
+    <form th:if="${ableToCheckout && order.getStatus().value}" method="get" action="/order/checkout">
         <input type="hidden" name="orderId" th:value="${order.getId()}"/>
         <button id="checkoutButton" type="submit" class="btn btn-secondary">Оформить заказ</button>
     </form>
